--- a/verses-sample/src/main/res/layout/item_search_bar.xml
+++ b/verses-sample/src/main/res/layout/item_search_bar.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:layout_margin="16dp"
+    app:cardBackgroundColor="?attr/colorSurfaceContainer"
     app:cardCornerRadius="28dp"
     app:cardElevation="0dp"
-    app:strokeWidth="1dp"
     app:strokeColor="?attr/colorOutlineVariant"
-    app:cardBackgroundColor="?attr/colorSurfaceContainer">
+    app:strokeWidth="1dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,6 +28,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_weight="1"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textAppearance="?attr/textAppearanceBodyLarge"
             android:textColor="?attr/colorOnSurfaceVariant" />
 
